--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Noto+Sans+Hebrew:wght@100;400;700&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -13,6 +18,14 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.tag-name:hover + svg{
+  fill: #3de4c0;
+}
+.tag-name:hover + svg  .chat-path{
+  stroke: #3de4c0;
+  fill: none;
 }
 
 @media (prefers-color-scheme: dark) {
